@@ -140,8 +140,10 @@ _tny_camel_folder_check_unread_count (TnyCamelFolder *self)
 	TnyFolderChange *change = tny_folder_change_new (TNY_FOLDER (self));
 	TnyCamelFolderPriv *priv = TNY_CAMEL_FOLDER_GET_PRIVATE (self);
 
+	priv->cached_length = camel_folder_get_message_count (priv->folder);
 	priv->unread_length = camel_folder_get_unread_message_count (priv->folder);
 	tny_folder_change_set_new_unread_count (change, priv->unread_length);
+	tny_folder_change_set_new_all_count (change, priv->cached_length);
 	notify_folder_observers_about (TNY_FOLDER (self), change);
 	g_object_unref (change);
 }
@@ -552,6 +554,8 @@ tny_camel_folder_sync_default (TnyFolder *self, gboolean expunge, GError **err)
 		}
 
 	camel_folder_sync (priv->folder, expunge, &ex);
+
+	_tny_camel_folder_check_unread_count (TNY_CAMEL_FOLDER (self));
 
 	g_static_rec_mutex_unlock (priv->folder_lock);
 
