@@ -2,6 +2,7 @@
 
 	* Connection failure handling in the IMAP code
 	* Experimental timeout for hostname lookups
+	* Unread and total count updating
 
 2007-06-14  Philip Van Hoof  <pvanhoof@gnome.org>
 
